accelerated-domains: add vxcvd67.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82225,6 +82225,7 @@ server=/vwo50.club/114.114.114.114
 server=/vwvvwv.com/114.114.114.114
 server=/vwwmsd.com/114.114.114.114
 server=/vx.com/114.114.114.114
+server=/vxcvd67.fun/114.114.114.114
 server=/vxe.com/114.114.114.114
 server=/vxia.net/114.114.114.114
 server=/vxiaocheng.com/114.114.114.114
