--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82266,6 +82266,7 @@ server=/vzkoo.com/114.114.114.114
 server=/vzuu.com/114.114.114.114
 server=/w-e.cc/114.114.114.114
 server=/w-mai.com/114.114.114.114
+server=/w-pool.com/114.114.114.114
 server=/w-zhong.com/114.114.114.114
 server=/w.biz/114.114.114.114
 server=/w032.com/114.114.114.114
