--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82278,6 +82278,7 @@ server=/w-pool.com/114.114.114.114
 server=/w-zhong.com/114.114.114.114
 server=/w.biz/114.114.114.114
 server=/w032.com/114.114.114.114
+server=/w0512.com/114.114.114.114
 server=/w0663.com/114.114.114.114
 server=/w0lker.com/114.114.114.114
 server=/w10a.com/114.114.114.114
