accelerated-domains: add wangdq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82530,6 +82530,7 @@ server=/wangdianmaster.com/114.114.114.114
 server=/wangdingcup.com/114.114.114.114
 server=/wangdongjie.com/114.114.114.114
 server=/wangdongzu.com/114.114.114.114
+server=/wangdq.com/114.114.114.114
 server=/wangdu.site/114.114.114.114
 server=/wangduanwifi.com/114.114.114.114
 server=/wangeda.com/114.114.114.114
