accelerated-domains: add wangsutong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82604,6 +82604,7 @@ server=/wangsu.net/114.114.114.114
 server=/wangsucloud.com/114.114.114.114
 server=/wangsuedge.com/114.114.114.114
 server=/wangsuedge.net/114.114.114.114
+server=/wangsutong.com/114.114.114.114
 server=/wangt.cc/114.114.114.114
 server=/wangtaishipin.com/114.114.114.114
 server=/wangtingrui.com/114.114.114.114
