accelerated-domains: add wangzhan5.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82651,6 +82651,7 @@ server=/wangyuwang.com/114.114.114.114
 server=/wangzhan123.net/114.114.114.114
 server=/wangzhan31.com/114.114.114.114
 server=/wangzhan360.com/114.114.114.114
+server=/wangzhan5.com/114.114.114.114
 server=/wangzhanbao.cc/114.114.114.114
 server=/wangzhanbianji.com/114.114.114.114
 server=/wangzhanchi.com/114.114.114.114
