accelerated-domains: add wangzhe.cx

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82650,6 +82650,7 @@ server=/wangzhanchi.com/114.114.114.114
 server=/wangzhantuiguang.net/114.114.114.114
 server=/wangzhanzj.com/114.114.114.114
 server=/wangzhe.com/114.114.114.114
+server=/wangzhe.cx/114.114.114.114
 server=/wangzhengzhen.com/114.114.114.114
 server=/wangzhennan.com/114.114.114.114
 server=/wanh5.com/114.114.114.114
