--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82689,6 +82689,7 @@ server=/wanjiedata.com/114.114.114.114
 server=/wanjiedu.com/114.114.114.114
 server=/wanjing111.com/114.114.114.114
 server=/wanjixin.com/114.114.114.114
+server=/wanjuanba.com/114.114.114.114
 server=/wanjunshijie.com/114.114.114.114
 server=/wanjutoy.com/114.114.114.114
 server=/wanjuzhan.com/114.114.114.114
