--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82765,6 +82765,7 @@ server=/wantuju.com/114.114.114.114
 server=/wantumusic.com/114.114.114.114
 server=/wantwords.net/114.114.114.114
 server=/wantwu.com/114.114.114.114
+server=/wantxt.cc/114.114.114.114
 server=/wanwan4399.com/114.114.114.114
 server=/wanwang.com/114.114.114.114
 server=/wanwang.space/114.114.114.114
