--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82893,6 +82893,7 @@ server=/waxrain.com/114.114.114.114
 server=/waxxh.me/114.114.114.114
 server=/way2solo.com/114.114.114.114
 server=/wayboosz.com/114.114.114.114
+server=/waycdn.com/114.114.114.114
 server=/waycloud.info/114.114.114.114
 server=/wayhu.cc/114.114.114.114
 server=/wayhu8.com/114.114.114.114
