--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82905,6 +82905,7 @@ server=/wayoulegal.com/114.114.114.114
 server=/wayoumi.com/114.114.114.114
 server=/wayoxi.com/114.114.114.114
 server=/waypons.com/114.114.114.114
+server=/wayqq.com/114.114.114.114
 server=/waysundata.com/114.114.114.114
 server=/waytit.com/114.114.114.114
 server=/waytoagi.com/114.114.114.114
