accelerated-domains: add wbimg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82937,6 +82937,7 @@ server=/wbiao.co/114.114.114.114
 server=/wbiao.com/114.114.114.114
 server=/wbiao120.com/114.114.114.114
 server=/wbiaohome.com/114.114.114.114
+server=/wbimg.com/114.114.114.114
 server=/wbo529.com/114.114.114.114
 server=/wboll.com/114.114.114.114
 server=/wbolt.com/114.114.114.114
