accelerated-domains: add wcenr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82956,6 +82956,7 @@ server=/wcaos.com/114.114.114.114
 server=/wcccc.cc/114.114.114.114
 server=/wcd.im/114.114.114.114
 server=/wcdfxj.xyz/114.114.114.114
+server=/wcenr.com/114.114.114.114
 server=/wcfang.com/114.114.114.114
 server=/wch-ic.com/114.114.114.114
 server=/wch17.com/114.114.114.114
