accelerated-domains: add wdeie.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82990,6 +82990,7 @@ server=/wddcn.com/114.114.114.114
 server=/wddns.net/114.114.114.114
 server=/wddream.com/114.114.114.114
 server=/wdeab01.com/114.114.114.114
+server=/wdeie.com/114.114.114.114
 server=/wdexam.com/114.114.114.114
 server=/wdfangyi.com/114.114.114.114
 server=/wdfxw.net/114.114.114.114
