accelerated-domains: add wdiur.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82996,6 +82996,7 @@ server=/wdfangyi.com/114.114.114.114
 server=/wdfxw.net/114.114.114.114
 server=/wdgf.com/114.114.114.114
 server=/wdghy.com/114.114.114.114
+server=/wdiur.com/114.114.114.114
 server=/wdiyi.com/114.114.114.114
 server=/wdj21.com/114.114.114.114
 server=/wdjimg.com/114.114.114.114
