accelerated-domains: add weilaa.xyz

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83322,6 +83322,7 @@ server=/weikengtech.com/114.114.114.114
 server=/weikenhair.com/114.114.114.114
 server=/weikeqi-biotech.com/114.114.114.114
 server=/weikuw.com/114.114.114.114
+server=/weilaa.xyz/114.114.114.114
 server=/weilai555.com/114.114.114.114
 server=/weilaili.com/114.114.114.114
 server=/weilairzdb.com/114.114.114.114
