accelerated-domains: add weixingshexiangji.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83478,6 +83478,7 @@ server=/weixingate.com/114.114.114.114
 server=/weixingmap.com/114.114.114.114
 server=/weixingon.com/114.114.114.114
 server=/weixingongzuoshi.com/114.114.114.114
+server=/weixingshexiangji.net/114.114.114.114
 server=/weixingv.com/114.114.114.114
 server=/weixinhost.com/114.114.114.114
 server=/weixinhow.com/114.114.114.114
