--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83730,6 +83730,7 @@ server=/wenyouyun.com/114.114.114.114
 server=/wenytao.com/114.114.114.114
 server=/wenyu6.com/114.114.114.114
 server=/wenyucdn.com/114.114.114.114
+server=/wenyupages.com/114.114.114.114
 server=/wenzaizhibo.com/114.114.114.114
 server=/wenzhangba.com/114.114.114.114
 server=/wenzhanghui.com/114.114.114.114
