--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83763,6 +83763,7 @@ server=/weqoocu.com/114.114.114.114
 server=/wereplicawatches.net/114.114.114.114
 server=/werewolf.online/114.114.114.114
 server=/werfactory.com/114.114.114.114
+server=/weryt111.fun/114.114.114.114
 server=/wesane.com/114.114.114.114
 server=/wescrm.com/114.114.114.114
 server=/wesdom.me/114.114.114.114
