accelerated-domains: add wesingapp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83764,6 +83764,7 @@ server=/weshequ.com/114.114.114.114
 server=/weshine.im/114.114.114.114
 server=/weshineapp.com/114.114.114.114
 server=/wesiedu.com/114.114.114.114
+server=/wesingapp.com/114.114.114.114
 server=/wespme.com/114.114.114.114
 server=/west-motion.com/114.114.114.114
 server=/west.xyz/114.114.114.114
