--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83883,6 +83883,7 @@ server=/wglm.net/114.114.114.114
 server=/wgm66.com/114.114.114.114
 server=/wgmf.com/114.114.114.114
 server=/wgnds.com/114.114.114.114
+server=/wgnpq.com/114.114.114.114
 server=/wgoic.com/114.114.114.114
 server=/wgos.com/114.114.114.114
 server=/wgpsec.org/114.114.114.114
