accelerated-domains: add whbmy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83938,6 +83938,7 @@ server=/whbgdt.com/114.114.114.114
 server=/whbj88.com/114.114.114.114
 server=/whbjdn.com/114.114.114.114
 server=/whbjyy.com/114.114.114.114
+server=/whbmy.com/114.114.114.114
 server=/whbsybj.com/114.114.114.114
 server=/whbts.com/114.114.114.114
 server=/whbuilding.com/114.114.114.114
