accelerated-domains: add whrdch.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84121,6 +84121,7 @@ server=/whrayy.com/114.114.114.114
 server=/whrazf.com/114.114.114.114
 server=/whrcbank.com/114.114.114.114
 server=/whrcw.cc/114.114.114.114
+server=/whrdch.com/114.114.114.114
 server=/whrenai.com/114.114.114.114
 server=/whres.net/114.114.114.114
 server=/whrhkj.com/114.114.114.114
