--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84231,6 +84231,7 @@ server=/whzc2008.com/114.114.114.114
 server=/whzdyy.com/114.114.114.114
 server=/whzh-cw.com/114.114.114.114
 server=/whzhanyi.com/114.114.114.114
+server=/whzhi.com/114.114.114.114
 server=/whzhongxin.net/114.114.114.114
 server=/whzhtd.com/114.114.114.114
 server=/whzhuoyuan.com/114.114.114.114
