--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84311,6 +84311,7 @@ server=/win-man.com/114.114.114.114
 server=/win1032.com/114.114.114.114
 server=/win1064.com/114.114.114.114
 server=/win10cjb.com/114.114.114.114
+server=/win10com.com/114.114.114.114
 server=/win10d.com/114.114.114.114
 server=/win10gw.com/114.114.114.114
 server=/win10net.com/114.114.114.114
