accelerated-domains: add wirlesshare.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84449,6 +84449,7 @@ server=/wireless-tag.com/114.114.114.114
 server=/wirelesschina-summit.com/114.114.114.114
 server=/wiremesh001.com/114.114.114.114
 server=/wiremeshforfilter.com/114.114.114.114
+server=/wirlesshare.com/114.114.114.114
 server=/wisburg.com/114.114.114.114
 server=/wisder.net/114.114.114.114
 server=/wisdoing.com/114.114.114.114
