accelerated-domains: add wkjhd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84591,6 +84591,7 @@ server=/wkepu.com/114.114.114.114
 server=/wkhub.com/114.114.114.114
 server=/wkimg.com/114.114.114.114
 server=/wkjava.top/114.114.114.114
+server=/wkjhd.com/114.114.114.114
 server=/wkkshu.com/114.114.114.114
 server=/wklken.me/114.114.114.114
 server=/wklm2018.com/114.114.114.114
