--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84714,6 +84714,7 @@ server=/wmupd.com/114.114.114.114
 server=/wmvideo.com/114.114.114.114
 server=/wmviv.com/114.114.114.114
 server=/wmwm.com/114.114.114.114
+server=/wmxba.com/114.114.114.114
 server=/wmxcjj.com/114.114.114.114
 server=/wmxpro.com/114.114.114.114
 server=/wmxue.com/114.114.114.114
