accelerated-domains: add wootwood.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84962,6 +84962,7 @@ server=/wooomooo.com/114.114.114.114
 server=/wooqx.com/114.114.114.114
 server=/woordee.com/114.114.114.114
 server=/woosmart.com/114.114.114.114
+server=/wootwood.com/114.114.114.114
 server=/woowtcprc.com/114.114.114.114
 server=/wooxhome.com/114.114.114.114
 server=/wooyun.org/114.114.114.114
