--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85064,6 +85064,7 @@ server=/wowoyou.net/114.114.114.114
 server=/wowozhe.com/114.114.114.114
 server=/wowqu.cc/114.114.114.114
 server=/wowsai.com/114.114.114.114
+server=/wowtb.com/114.114.114.114
 server=/woxian.com/114.114.114.114
 server=/woxiaoyun.com/114.114.114.114
 server=/woxihuan.com/114.114.114.114
