accelerated-domains: add wqiuj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85133,6 +85133,7 @@ server=/wqhunqing.com/114.114.114.114
 server=/wqian.net/114.114.114.114
 server=/wqiis.com/114.114.114.114
 server=/wqingjian.com/114.114.114.114
+server=/wqiuj.com/114.114.114.114
 server=/wqketang.com/114.114.114.114
 server=/wqlin.com/114.114.114.114
 server=/wqlkz.com/114.114.114.114
