accelerated-domains: add wrjgeh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85163,6 +85163,7 @@ server=/writebp.com/114.114.114.114
 server=/writingartsociety.asia/114.114.114.114
 server=/writingo-editor.com/114.114.114.114
 server=/writingo.net/114.114.114.114
+server=/wrjgeh.com/114.114.114.114
 server=/wrjpcwr.com/114.114.114.114
 server=/wrjzj.com/114.114.114.114
 server=/wrkdih.com/114.114.114.114
