--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85191,6 +85191,7 @@ server=/ws.ksmobile.net/114.114.114.114
 server=/wsaf.net/114.114.114.114
 server=/wsandos.com/114.114.114.114
 server=/wsbuluo.com/114.114.114.114
+server=/wscdn30.com/114.114.114.114
 server=/wscdns.com/114.114.114.114
 server=/wscdns.info/114.114.114.114
 server=/wscdns.org/114.114.114.114
