accelerated-domains: add wscdnss.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85187,6 +85187,7 @@ server=/wscdn30.com/114.114.114.114
 server=/wscdns.com/114.114.114.114
 server=/wscdns.info/114.114.114.114
 server=/wscdns.org/114.114.114.114
+server=/wscdnss.com/114.114.114.114
 server=/wscgdns.com/114.114.114.114
 server=/wsche.com/114.114.114.114
 server=/wscloudcdn.com/114.114.114.114
