--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85200,6 +85200,7 @@ server=/wscgdns.com/114.114.114.114
 server=/wsche.com/114.114.114.114
 server=/wscloudcdn.com/114.114.114.114
 server=/wscloudcdn.org/114.114.114.114
+server=/wsclouddns.com/114.114.114.114
 server=/wscloudsec.com/114.114.114.114
 server=/wsclsb.net/114.114.114.114
 server=/wscn.net/114.114.114.114
