accelerated-domains: add wscloudvpn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85202,6 +85202,7 @@ server=/wscloudcdn.com/114.114.114.114
 server=/wscloudcdn.org/114.114.114.114
 server=/wsclouddns.com/114.114.114.114
 server=/wscloudsec.com/114.114.114.114
+server=/wscloudvpn.com/114.114.114.114
 server=/wsclsb.net/114.114.114.114
 server=/wscn.net/114.114.114.114
 server=/wscoder.com/114.114.114.114
