--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85227,6 +85227,7 @@ server=/wsglb0.com/114.114.114.114
 server=/wsglb0.info/114.114.114.114
 server=/wsglb0.org/114.114.114.114
 server=/wsglw.com/114.114.114.114
+server=/wsglw.net/114.114.114.114
 server=/wsgph.com/114.114.114.114
 server=/wsgtm1.com/114.114.114.114
 server=/wsgtm3.com/114.114.114.114
