accelerated-domains: add wshifen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85244,6 +85244,7 @@ server=/wshang.com/114.114.114.114
 server=/wshbzc.com/114.114.114.114
 server=/wshengda2009.com/114.114.114.114
 server=/wshenm.com/114.114.114.114
+server=/wshifen.com/114.114.114.114
 server=/wshost.cc/114.114.114.114
 server=/wshoto.com/114.114.114.114
 server=/wshtgame.com/114.114.114.114
