--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85257,6 +85257,7 @@ server=/wsngb.com/114.114.114.114
 server=/wsonh.com/114.114.114.114
 server=/wsoss.com/114.114.114.114
 server=/wsound.cc/114.114.114.114
+server=/wsoversea.com/114.114.114.114
 server=/wsoversea.info/114.114.114.114
 server=/wsoversea.net/114.114.114.114
 server=/wsqejt.com/114.114.114.114
