accelerated-domains: add wtroytj33.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85328,6 +85328,7 @@ server=/wtoutiao.com/114.114.114.114
 server=/wtown.com/114.114.114.114
 server=/wtr.cc/114.114.114.114
 server=/wtraff.com/114.114.114.114
+server=/wtroytj33.fun/114.114.114.114
 server=/wts999.com/114.114.114.114
 server=/wtsimg.com/114.114.114.114
 server=/wtsm.net/114.114.114.114
