accelerated-domains: add wu65.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85346,6 +85346,7 @@ server=/wu-mi.com/114.114.114.114
 server=/wu.run/114.114.114.114
 server=/wu35.com/114.114.114.114
 server=/wu37.com/114.114.114.114
+server=/wu65.com/114.114.114.114
 server=/wu7zhi.com/114.114.114.114
 server=/wuage.com/114.114.114.114
 server=/wuaihanfu.com/114.114.114.114
