--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85830,6 +85830,7 @@ server=/wxshake.com/114.114.114.114
 server=/wxshiteng.com/114.114.114.114
 server=/wxshuku.la/114.114.114.114
 server=/wxslzf.com/114.114.114.114
+server=/wxsohu.com/114.114.114.114
 server=/wxsteed.com/114.114.114.114
 server=/wxstztg.com/114.114.114.114
 server=/wxt2020.com/114.114.114.114
