--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85907,6 +85907,7 @@ server=/wytx.net/114.114.114.114
 server=/wytype.com/114.114.114.114
 server=/wytzgl.com/114.114.114.114
 server=/wyuetec.com/114.114.114.114
+server=/wywsdx.com/114.114.114.114
 server=/wywy.ltd/114.114.114.114
 server=/wywy6.com/114.114.114.114
 server=/wywyx.com/114.114.114.114
