accelerated-domains: add wzxw7.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86018,6 +86018,7 @@ server=/wzxianggui.com/114.114.114.114
 server=/wzxinchang.com/114.114.114.114
 server=/wzxinfeng.com/114.114.114.114
 server=/wzxszx.net/114.114.114.114
+server=/wzxw7.com/114.114.114.114
 server=/wzxywj.com/114.114.114.114
 server=/wzy2.com/114.114.114.114
 server=/wzy6.com/114.114.114.114
