accelerated-domains: add x6z6.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86086,6 +86086,7 @@ server=/x66597.com/114.114.114.114
 server=/x6d.com/114.114.114.114
 server=/x6tb.com/114.114.114.114
 server=/x6x8.com/114.114.114.114
+server=/x6z6.com/114.114.114.114
 server=/x72y.com/114.114.114.114
 server=/x78j7hk.com/114.114.114.114
 server=/x7game.com/114.114.114.114
