--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86207,6 +86207,7 @@ server=/xatyds.com/114.114.114.114
 server=/xatzj.com/114.114.114.114
 server=/xauat-hqc.com/114.114.114.114
 server=/xaudiopro.com/114.114.114.114
+server=/xavua.com/114.114.114.114
 server=/xawb.com/114.114.114.114
 server=/xawbb.com/114.114.114.114
 server=/xawdslzp.com/114.114.114.114
