--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86250,6 +86250,7 @@ server=/xbdgps.com/114.114.114.114
 server=/xbds.cc/114.114.114.114
 server=/xbdym.com/114.114.114.114
 server=/xbequge.com/114.114.114.114
+server=/xberu.com/114.114.114.114
 server=/xbeta.info/114.114.114.114
 server=/xbetgames37.com/114.114.114.114
 server=/xbext.com/114.114.114.114
