accelerated-domains: add xcdzsw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86316,6 +86316,7 @@ server=/xcdesign.net/114.114.114.114
 server=/xcdn.global/114.114.114.114
 server=/xcdngyc.vip/114.114.114.114
 server=/xcdssy.com/114.114.114.114
+server=/xcdzsw.com/114.114.114.114
 server=/xcetv.com/114.114.114.114
 server=/xcex.net/114.114.114.114
 server=/xcexe.com/114.114.114.114
