--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86374,6 +86374,7 @@ server=/xcpxssx.com/114.114.114.114
 server=/xcq2022.com/114.114.114.114
 server=/xcq518.com/114.114.114.114
 server=/xcqxcq.com/114.114.114.114
+server=/xcsaz.com/114.114.114.114
 server=/xcsc.com/114.114.114.114
 server=/xcsclhs.com/114.114.114.114
 server=/xcshaifen.com/114.114.114.114
