--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86487,6 +86487,7 @@ server=/xdxiaoshuo.com/114.114.114.114
 server=/xdxmwang.com/114.114.114.114
 server=/xdyjt.com/114.114.114.114
 server=/xdystar.com/114.114.114.114
+server=/xdyszx.com/114.114.114.114
 server=/xdytuliao.com/114.114.114.114
 server=/xdyy100.com/114.114.114.114
 server=/xdzhsw.com/114.114.114.114
