--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86501,6 +86501,7 @@ server=/xender.com/114.114.114.114
 server=/xenium.mobi/114.114.114.114
 server=/xepher.fun/114.114.114.114
 server=/xerlang.com/114.114.114.114
+server=/xeryt111.fun/114.114.114.114
 server=/xesapp.com/114.114.114.114
 server=/xescdn.com/114.114.114.114
 server=/xesdns.com/114.114.114.114
