--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86595,6 +86595,7 @@ server=/xfzllht.com/114.114.114.114
 server=/xfztgxt.com/114.114.114.114
 server=/xg1234.com/114.114.114.114
 server=/xg38.com/114.114.114.114
+server=/xgaij.com/114.114.114.114
 server=/xgamevip.com/114.114.114.114
 server=/xgantt.net/114.114.114.114
 server=/xgate.com/114.114.114.114
