accelerated-domains: add xiangchim0.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86818,6 +86818,7 @@ server=/xiangbojiubo.com/114.114.114.114
 server=/xiangboshu.net/114.114.114.114
 server=/xiangbosoft.com/114.114.114.114
 server=/xiangchengjob.com/114.114.114.114
+server=/xiangchim0.com/114.114.114.114
 server=/xiangcoin.com/114.114.114.114
 server=/xiangcun.com/114.114.114.114
 server=/xiangcunxiaoshuo.com/114.114.114.114
