--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87186,6 +87186,7 @@ server=/xiaomi.net/114.114.114.114
 server=/xiaomi.org/114.114.114.114
 server=/xiaomi.tw/114.114.114.114
 server=/xiaomiaozai.com/114.114.114.114
+server=/xiaomicache.com/114.114.114.114
 server=/xiaomicorp.com/114.114.114.114
 server=/xiaomicorp.net/114.114.114.114
 server=/xiaomicp.com/114.114.114.114
