--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87247,6 +87247,7 @@ server=/xiaopiaoyou.com/114.114.114.114
 server=/xiaopin5.com/114.114.114.114
 server=/xiaopinchuxing.com/114.114.114.114
 server=/xiaopinw.com/114.114.114.114
+server=/xiaopinwo.com/114.114.114.114
 server=/xiaopiu.com/114.114.114.114
 server=/xiaoqiandao.com/114.114.114.114
 server=/xiaoqiangge.com/114.114.114.114
