--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87402,6 +87402,7 @@ server=/xiaozhenpaotui.com/114.114.114.114
 server=/xiaozhibaoxian.com/114.114.114.114
 server=/xiaozhibo.com/114.114.114.114
 server=/xiaozhiyun.com/114.114.114.114
+server=/xiaozhizhijia.com/114.114.114.114
 server=/xiaozhongjishu.com/114.114.114.114
 server=/xiaozhoumo.com/114.114.114.114
 server=/xiaozhu.com/114.114.114.114
