--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87450,6 +87450,7 @@ server=/xiazaicc.com/114.114.114.114
 server=/xiazaijidi.com/114.114.114.114
 server=/xiazaisoft.com/114.114.114.114
 server=/xiazaiwx.com/114.114.114.114
+server=/xiazaiyuan.net/114.114.114.114
 server=/xiazaiziti.com/114.114.114.114
 server=/xibaike.com/114.114.114.114
 server=/xibaiwang.com/114.114.114.114
