accelerated-domains: add xiji-express.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87553,6 +87553,7 @@ server=/xihuan.me/114.114.114.114
 server=/xihusgh.com/114.114.114.114
 server=/xiimoon.com/114.114.114.114
 server=/xiinnn.com/114.114.114.114
+server=/xiji-express.com/114.114.114.114
 server=/xiji.com/114.114.114.114
 server=/xijiangtv.com/114.114.114.114
 server=/xijiaowolong.com/114.114.114.114
