--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87796,6 +87796,7 @@ server=/xingxingbao.com/114.114.114.114
 server=/xingxingjizhang.com/114.114.114.114
 server=/xingxingzaixian.fun/114.114.114.114
 server=/xingxingzu.com/114.114.114.114
+server=/xingyaocq.com/114.114.114.114
 server=/xingyaomob.com/114.114.114.114
 server=/xingyaoss.com/114.114.114.114
 server=/xingyaox.com/114.114.114.114
