--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88151,6 +88151,7 @@ server=/xishuashuatuan.com/114.114.114.114
 server=/xishuizk.com/114.114.114.114
 server=/xishunj.com/114.114.114.114
 server=/xisofttec.com/114.114.114.114
+server=/xitang.love/114.114.114.114
 server=/xitaoinfo.com/114.114.114.114
 server=/xitek.com/114.114.114.114
 server=/xitek.net/114.114.114.114
