--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88484,6 +88484,7 @@ server=/xlkshop.com/114.114.114.114
 server=/xlkty.com/114.114.114.114
 server=/xllyk.com/114.114.114.114
 server=/xlm258.com/114.114.114.114
+server=/xlmis.com/114.114.114.114
 server=/xlndt.com/114.114.114.114
 server=/xlobo.com/114.114.114.114
 server=/xlongm.com/114.114.114.114
