--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88542,6 +88542,7 @@ server=/xm211.com/114.114.114.114
 server=/xm680.com/114.114.114.114
 server=/xm6wpp.com/114.114.114.114
 server=/xm909.com/114.114.114.114
+server=/xm9178.com/114.114.114.114
 server=/xm9m.com/114.114.114.114
 server=/xmac.app/114.114.114.114
 server=/xmafkj.com/114.114.114.114
