--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88557,6 +88557,7 @@ server=/xmcord.com/114.114.114.114
 server=/xmcp.ltd/114.114.114.114
 server=/xmcwh.com/114.114.114.114
 server=/xmcx.net/114.114.114.114
+server=/xmcxz.com/114.114.114.114
 server=/xmd5.com/114.114.114.114
 server=/xmdianbiao.com/114.114.114.114
 server=/xmduxin.com/114.114.114.114
