accelerated-domains: add xmliw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88606,6 +88606,7 @@ server=/xml-journal.net/114.114.114.114
 server=/xmldz4.com/114.114.114.114
 server=/xmlheads.com/114.114.114.114
 server=/xmlhifi.com/114.114.114.114
+server=/xmliw.com/114.114.114.114
 server=/xmlulub.com/114.114.114.114
 server=/xmlvbarcode.com/114.114.114.114
 server=/xmmade.com/114.114.114.114
