--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88644,6 +88644,7 @@ server=/xmrdtx.com/114.114.114.114
 server=/xmruiyou.com/114.114.114.114
 server=/xmseeyouyima.com/114.114.114.114
 server=/xmsgame.com/114.114.114.114
+server=/xmshqh.com/114.114.114.114
 server=/xmsixian.com/114.114.114.114
 server=/xmsiyb.com/114.114.114.114
 server=/xmsme.com/114.114.114.114
