accelerated-domains: add xmzwdgm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88683,6 +88683,7 @@ server=/xmzjjl.com/114.114.114.114
 server=/xmzjtjckmy.com/114.114.114.114
 server=/xmzmmr.com/114.114.114.114
 server=/xmzmy.com/114.114.114.114
+server=/xmzwdgm.com/114.114.114.114
 server=/xmzyark.com/114.114.114.114
 server=/xmzylh.com/114.114.114.114
 server=/xmzzy.net/114.114.114.114
