accelerated-domains: add xoqeyeti.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88994,6 +88994,7 @@ server=/xnzn.net/114.114.114.114
 server=/xoao.com/114.114.114.114
 server=/xoliao.com/114.114.114.114
 server=/xooooa.com/114.114.114.114
+server=/xoqeyeti.com/114.114.114.114
 server=/xorlink.com/114.114.114.114
 server=/xorpay.com/114.114.114.114
 server=/xoudou.com/114.114.114.114
