--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89035,6 +89035,7 @@ server=/xpicw.top/114.114.114.114
 server=/xpj0066.com/114.114.114.114
 server=/xpj16.net/114.114.114.114
 server=/xpj6789.com/114.114.114.114
+server=/xpjis.com/114.114.114.114
 server=/xpkjpk.com/114.114.114.114
 server=/xpkongqipao.com/114.114.114.114
 server=/xplaymobile.com/114.114.114.114
