accelerated-domains: add xszysc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89233,6 +89233,7 @@ server=/xszrcw.com/114.114.114.114
 server=/xszsw.com/114.114.114.114
 server=/xszww2.com/114.114.114.114
 server=/xszww8.net/114.114.114.114
+server=/xszysc.com/114.114.114.114
 server=/xt-gas.com/114.114.114.114
 server=/xt-kp.com/114.114.114.114
 server=/xt-luyou.com/114.114.114.114
