--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89243,6 +89243,7 @@ server=/xt.pub/114.114.114.114
 server=/xt12333.com/114.114.114.114
 server=/xt3yy.com/114.114.114.114
 server=/xt7p.com/114.114.114.114
+server=/xt918.com/114.114.114.114
 server=/xtadmins.com/114.114.114.114
 server=/xtaike.com/114.114.114.114
 server=/xtal.cc/114.114.114.114
