--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89656,6 +89656,7 @@ server=/xupu120.com/114.114.114.114
 server=/xuqyfw.com/114.114.114.114
 server=/xurong.xyz/114.114.114.114
 server=/xuruowei.com/114.114.114.114
+server=/xushenghb.com/114.114.114.114
 server=/xushunda.com/114.114.114.114
 server=/xusplastic.com/114.114.114.114
 server=/xussb.com/114.114.114.114
