--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89971,6 +89971,7 @@ server=/xypse.com/114.114.114.114
 server=/xyqb.com/114.114.114.114
 server=/xyqczy.com/114.114.114.114
 server=/xyqmall.com/114.114.114.114
+server=/xyqxr.com/114.114.114.114
 server=/xyqy88.com/114.114.114.114
 server=/xyrbszb.com/114.114.114.114
 server=/xyrtv.com/114.114.114.114
