--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89966,6 +89966,7 @@ server=/xyqmall.com/114.114.114.114
 server=/xyqxr.com/114.114.114.114
 server=/xyqy88.com/114.114.114.114
 server=/xyrbszb.com/114.114.114.114
+server=/xyrkl.com/114.114.114.114
 server=/xyrtv.com/114.114.114.114
 server=/xysb.com/114.114.114.114
 server=/xyshoppingbag.com/114.114.114.114
