accelerated-domains: add xzwk.hk

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90156,6 +90156,7 @@ server=/xzw.com/114.114.114.114
 server=/xzw.pw/114.114.114.114
 server=/xzwanda.com/114.114.114.114
 server=/xzwhg.com/114.114.114.114
+server=/xzwk.hk/114.114.114.114
 server=/xzx.com/114.114.114.114
 server=/xzxjkyy.com/114.114.114.114
 server=/xzxkjd.com/114.114.114.114
