accelerated-domains: add xzyituo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90156,6 +90156,7 @@ server=/xzxw.com/114.114.114.114
 server=/xzxwhcb.com/114.114.114.114
 server=/xzxxlcp.com/114.114.114.114
 server=/xzyhealth.com/114.114.114.114
+server=/xzyituo.com/114.114.114.114
 server=/xzyjl.com/114.114.114.114
 server=/xzynyy.com/114.114.114.114
 server=/xzzhbsq.com/114.114.114.114
