--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90221,6 +90221,7 @@ server=/yahaizi.com/114.114.114.114
 server=/yahboom.com/114.114.114.114
 server=/yahoo001.com/114.114.114.114
 server=/yahotab.com/114.114.114.114
+server=/yahugg.com/114.114.114.114
 server=/yahuhost.com/114.114.114.114
 server=/yahui.hk/114.114.114.114
 server=/yahuishou.com/114.114.114.114
