accelerated-domains: add yahui.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90223,6 +90223,7 @@ server=/yahoo001.com/114.114.114.114
 server=/yahotab.com/114.114.114.114
 server=/yahugg.com/114.114.114.114
 server=/yahuhost.com/114.114.114.114
+server=/yahui.cc/114.114.114.114
 server=/yahui.hk/114.114.114.114
 server=/yahuishou.com/114.114.114.114
 server=/yahunet.com/114.114.114.114
