--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90293,6 +90293,7 @@ server=/yanfukun.com/114.114.114.114
 server=/yang99.fun/114.114.114.114
 server=/yangbentong.com/114.114.114.114
 server=/yangchenglianhe.com/114.114.114.114
+server=/yangcheyongche.com/114.114.114.114
 server=/yangchunjian.com/114.114.114.114
 server=/yangcong.com/114.114.114.114
 server=/yangcong345.com/114.114.114.114
