--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90299,6 +90299,7 @@ server=/yanggu.tv/114.114.114.114
 server=/yangguangxinye.com/114.114.114.114
 server=/yangguanjun.com/114.114.114.114
 server=/yangguiweihuo.com/114.114.114.114
+server=/yanghengjun.com/114.114.114.114
 server=/yanghong.art/114.114.114.114
 server=/yanghuaxing.com/114.114.114.114
 server=/yanghui.com/114.114.114.114
