--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90394,6 +90394,7 @@ server=/yanjiaoweixin.com/114.114.114.114
 server=/yanjinews.com/114.114.114.114
 server=/yanjingge.com/114.114.114.114
 server=/yanjiubaogao.com/114.114.114.114
+server=/yanjiusuo.cc/114.114.114.114
 server=/yanjiyou.net/114.114.114.114
 server=/yanjun7858.com/114.114.114.114
 server=/yanjunbo.com/114.114.114.114
