--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90623,6 +90623,7 @@ server=/ybren.com/114.114.114.114
 server=/ybs120.com/114.114.114.114
 server=/ybscjp.com/114.114.114.114
 server=/ybstjs.com/114.114.114.114
+server=/ybstwl.com/114.114.114.114
 server=/ybsyyh.com/114.114.114.114
 server=/ybt168.com/114.114.114.114
 server=/ybtianshantu.com/114.114.114.114
