--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90783,6 +90783,7 @@ server=/ydn5.com/114.114.114.114
 server=/ydnanke.com/114.114.114.114
 server=/ydnewmedia.com/114.114.114.114
 server=/ydniu.com/114.114.114.114
+server=/ydouu.com/114.114.114.114
 server=/ydr.me/114.114.114.114
 server=/ydsaso.com/114.114.114.114
 server=/ydscan.net/114.114.114.114
