--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90789,6 +90789,7 @@ server=/ydtnotary.com/114.114.114.114
 server=/ydtqd.com/114.114.114.114
 server=/ydu6.com/114.114.114.114
 server=/yduav.com/114.114.114.114
+server=/ydvip00ae.com/114.114.114.114
 server=/ydwatch.com/114.114.114.114
 server=/ydx2.com/114.114.114.114
 server=/ydxdg.xyz/114.114.114.114
