accelerated-domains: add yenlm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90889,6 +90889,7 @@ server=/yemengstar.com/114.114.114.114
 server=/yemet.com/114.114.114.114
 server=/yemhj.com/114.114.114.114
 server=/yenlex.com/114.114.114.114
+server=/yenlm.com/114.114.114.114
 server=/yenmon.com/114.114.114.114
 server=/yentechnology.com/114.114.114.114
 server=/yeolar.com/114.114.114.114
