--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90906,6 +90906,7 @@ server=/yephy.com/114.114.114.114
 server=/yeree.com/114.114.114.114
 server=/yergoo.com/114.114.114.114
 server=/yerhfnytky.top/114.114.114.114
+server=/yeryt111.fun/114.114.114.114
 server=/yes-chinese.com/114.114.114.114
 server=/yes115.com/114.114.114.114
 server=/yes58.net/114.114.114.114
