accelerated-domains: add yfano.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90986,6 +90986,7 @@ server=/yf0008168.com/114.114.114.114
 server=/yf3p.com/114.114.114.114
 server=/yf520.com/114.114.114.114
 server=/yfanads.com/114.114.114.114
+server=/yfano.com/114.114.114.114
 server=/yfanqie.com/114.114.114.114
 server=/yfbudong.com/114.114.114.114
 server=/yfbzb.com/114.114.114.114
