--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91046,6 +91046,7 @@ server=/yfmhw.com/114.114.114.114
 server=/yfp2p.net/114.114.114.114
 server=/yfpayment.com/114.114.114.114
 server=/yfsafety.com/114.114.114.114
+server=/yfscdn.com/114.114.114.114
 server=/yfscdn.net/114.114.114.114
 server=/yfservice.com/114.114.114.114
 server=/yfswny.com/114.114.114.114
