accelerated-domains: add yidop.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91306,6 +91306,7 @@ server=/yidong-food.com/114.114.114.114
 server=/yidonghua.com/114.114.114.114
 server=/yidonglin.com/114.114.114.114
 server=/yidongtimes.com/114.114.114.114
+server=/yidop.com/114.114.114.114
 server=/yidoutang.com/114.114.114.114
 server=/yidouzhaofang.com/114.114.114.114
 server=/yidu.cc/114.114.114.114
