accelerated-domains: add yingyongbei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91632,6 +91632,7 @@ server=/yingyecraft.com/114.114.114.114
 server=/yingyeping.com/114.114.114.114
 server=/yingyijin.com/114.114.114.114
 server=/yingyinglicai.com/114.114.114.114
+server=/yingyongbei.com/114.114.114.114
 server=/yingyongge.com/114.114.114.114
 server=/yingyonghao8.com/114.114.114.114
 server=/yingyonghui.com/114.114.114.114
