--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91666,6 +91666,7 @@ server=/yinheyuedu.com/114.114.114.114
 server=/yinhu.com/114.114.114.114
 server=/yinhuadm.one/114.114.114.114
 server=/yini.org/114.114.114.114
+server=/yini8.com/114.114.114.114
 server=/yinjispace.com/114.114.114.114
 server=/yinka.co/114.114.114.114
 server=/yinlingshuyuan.com/114.114.114.114
