accelerated-domains: add yinyouapp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91698,6 +91698,7 @@ server=/yinxinbh.com/114.114.114.114
 server=/yinxing.com/114.114.114.114
 server=/yinxunbiao.com/114.114.114.114
 server=/yinyao168.com/114.114.114.114
+server=/yinyouapp.com/114.114.114.114
 server=/yinyue7.com/114.114.114.114
 server=/yinyuegf.com/114.114.114.114
 server=/yinyueke.net/114.114.114.114
