--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91714,6 +91714,7 @@ server=/yioulai.com/114.114.114.114
 server=/yiovo.com/114.114.114.114
 server=/yipai360.com/114.114.114.114
 server=/yipaiming.com/114.114.114.114
+server=/yipanhaocai.com/114.114.114.114
 server=/yipaogan.com/114.114.114.114
 server=/yiparts.com/114.114.114.114
 server=/yipemail.com/114.114.114.114
