--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91983,6 +91983,7 @@ server=/yiyuanjichang.com/114.114.114.114
 server=/yiyuanluye.com/114.114.114.114
 server=/yiyuanqiang.net/114.114.114.114
 server=/yiyuansoft.com/114.114.114.114
+server=/yiyuantian.com/114.114.114.114
 server=/yiyuanyi.org/114.114.114.114
 server=/yiyukj.com/114.114.114.114
 server=/yiyum.com/114.114.114.114
