accelerated-domains: add yjegf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92029,6 +92029,7 @@ server=/yjcp.com/114.114.114.114
 server=/yjctrip.com/114.114.114.114
 server=/yjdatasos.com/114.114.114.114
 server=/yjdzm.com/114.114.114.114
+server=/yjegf.com/114.114.114.114
 server=/yjfl.net/114.114.114.114
 server=/yjfs8.com/114.114.114.114
 server=/yjgxcx.com/114.114.114.114
