accelerated-domains: add yjias.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92045,6 +92045,7 @@ server=/yjhbqx.com/114.114.114.114
 server=/yjhnt888.com/114.114.114.114
 server=/yjhyjl.com/114.114.114.114
 server=/yjhzb.com/114.114.114.114
+server=/yjias.com/114.114.114.114
 server=/yjihua.com/114.114.114.114
 server=/yjijy.com/114.114.114.114
 server=/yjiyun.com/114.114.114.114
