--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92276,6 +92276,7 @@ server=/ym.today/114.114.114.114
 server=/ym01.tech/114.114.114.114
 server=/ym23.com/114.114.114.114
 server=/ym3222333.com/114.114.114.114
+server=/ym8p.net/114.114.114.114
 server=/ymacg.com/114.114.114.114
 server=/ymadly.com/114.114.114.114
 server=/ymailcampaign.com/114.114.114.114
