accelerated-domains: add ymdxl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92294,6 +92294,7 @@ server=/ymck.pro/114.114.114.114
 server=/ymcsepu.com/114.114.114.114
 server=/ymd520.net/114.114.114.114
 server=/ymdoctor.com/114.114.114.114
+server=/ymdxl.com/114.114.114.114
 server=/ymeasy.com/114.114.114.114
 server=/ymechina.com/114.114.114.114
 server=/ymeei.com/114.114.114.114
