accelerated-domains: add ymima360.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92299,6 +92299,7 @@ server=/ymhfp.com/114.114.114.114
 server=/ymhudong.com/114.114.114.114
 server=/ymhuwai.com/114.114.114.114
 server=/ymhzpx.com/114.114.114.114
+server=/ymima360.com/114.114.114.114
 server=/ymiot.net/114.114.114.114
 server=/ymj9.com/114.114.114.114
 server=/ymjx8.com/114.114.114.114
