accelerated-domains: add ymrzr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92315,6 +92315,7 @@ server=/ympc88.com/114.114.114.114
 server=/ympcb.com/114.114.114.114
 server=/ymraaa.com/114.114.114.114
 server=/ymrcw.vip/114.114.114.114
+server=/ymrzr.com/114.114.114.114
 server=/yms.cool/114.114.114.114
 server=/ymsoft.team/114.114.114.114
 server=/ymsss.com/114.114.114.114
