accelerated-domains: add ynzhby.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92440,6 +92440,7 @@ server=/ynytjz.com/114.114.114.114
 server=/ynytkc.com/114.114.114.114
 server=/ynyxms.com/114.114.114.114
 server=/ynzg.org/114.114.114.114
+server=/ynzhby.com/114.114.114.114
 server=/ynzp.com/114.114.114.114
 server=/ynzrf.com/114.114.114.114
 server=/ynztctv.com/114.114.114.114
