--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92506,6 +92506,7 @@ server=/yohomars.com/114.114.114.114
 server=/yohoshow.com/114.114.114.114
 server=/yohui.com/114.114.114.114
 server=/yohuu.com/114.114.114.114
+server=/yoiur.com/114.114.114.114
 server=/yojcool.com/114.114.114.114
 server=/yojochina.com/114.114.114.114
 server=/yoju360.com/114.114.114.114
