accelerated-domains: add youzhicn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93014,6 +93014,7 @@ server=/youzhao.com/114.114.114.114
 server=/youzhi.net/114.114.114.114
 server=/youzhi99.com/114.114.114.114
 server=/youzhicai.com/114.114.114.114
+server=/youzhicn.com/114.114.114.114
 server=/youzhiwk.com/114.114.114.114
 server=/youzhixueyuan.com/114.114.114.114
 server=/youzhiying.com/114.114.114.114
