--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93109,6 +93109,7 @@ server=/yqbgjj.com/114.114.114.114
 server=/yqbimg.com/114.114.114.114
 server=/yqbimg.net/114.114.114.114
 server=/yqchjd.com/114.114.114.114
+server=/yqcymj.com/114.114.114.114
 server=/yqdtv.com/114.114.114.114
 server=/yqelect.com/114.114.114.114
 server=/yqfml.com/114.114.114.114
