accelerated-domains: add yqxs.xyz

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93139,6 +93139,7 @@ server=/yqwxw.cc/114.114.114.114
 server=/yqwyx.xyz/114.114.114.114
 server=/yqxiuyoung.com/114.114.114.114
 server=/yqxs.cc/114.114.114.114
+server=/yqxs.xyz/114.114.114.114
 server=/yqxsg.cc/114.114.114.114
 server=/yqxsge.cc/114.114.114.114
 server=/yqxxjy.com/114.114.114.114
