--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93192,6 +93192,7 @@ server=/ys8.com/114.114.114.114
 server=/ys991.com/114.114.114.114
 server=/ysaedesign.com/114.114.114.114
 server=/ysali.com/114.114.114.114
+server=/ysb76.com/114.114.114.114
 server=/ysbz168.com/114.114.114.114
 server=/yscase.com/114.114.114.114
 server=/ysch.cc/114.114.114.114
