--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93200,6 +93200,7 @@ server=/yschn.com/114.114.114.114
 server=/yscq.com/114.114.114.114
 server=/yscro.com/114.114.114.114
 server=/ysdq8.com/114.114.114.114
+server=/ysdui.com/114.114.114.114
 server=/ysedu.com/114.114.114.114
 server=/ysemi.com/114.114.114.114
 server=/ysepan.com/114.114.114.114
