--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93271,6 +93271,7 @@ server=/ystzzy.com/114.114.114.114
 server=/ysug.com/114.114.114.114
 server=/ysupan.com/114.114.114.114
 server=/ysw1950.com/114.114.114.114
+server=/ysw365.com/114.114.114.114
 server=/ysw68.com/114.114.114.114
 server=/yswebportal.cc/114.114.114.114
 server=/yswh.com/114.114.114.114
