accelerated-domains: add ytbt.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93309,6 +93309,7 @@ server=/ytaotao.net/114.114.114.114
 server=/ytbainakeji.com/114.114.114.114
 server=/ytbbs.com/114.114.114.114
 server=/ytbfilm.com/114.114.114.114
+server=/ytbt.cc/114.114.114.114
 server=/ytcbh.com/114.114.114.114
 server=/ytccr.com/114.114.114.114
 server=/ytchangyang.com/114.114.114.114
