accelerated-domains: add ytroytj33.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93360,6 +93360,7 @@ server=/ytrbyr.lol/114.114.114.114
 server=/ytrdc.com/114.114.114.114
 server=/ytrlzyw.com/114.114.114.114
 server=/ytrmtzx.com/114.114.114.114
+server=/ytroytj33.fun/114.114.114.114
 server=/ytsanchuan.com/114.114.114.114
 server=/ytsense.com/114.114.114.114
 server=/ytshipin.com/114.114.114.114
