accelerated-domains: add yueduyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93544,6 +93544,7 @@ server=/yueduwen.com/114.114.114.114
 server=/yueduwu.com/114.114.114.114
 server=/yueduwuxianpic.com/114.114.114.114
 server=/yueduyun.com/114.114.114.114
+server=/yueduyy.com/114.114.114.114
 server=/yuegongyutu.com/114.114.114.114
 server=/yuegowu.com/114.114.114.114
 server=/yuegui.shop/114.114.114.114
