--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93559,6 +93559,7 @@ server=/yuejikeng.com/114.114.114.114
 server=/yuejob.com/114.114.114.114
 server=/yuejuanbao.com/114.114.114.114
 server=/yuejuly.com/114.114.114.114
+server=/yueka.com/114.114.114.114
 server=/yuekenet.com/114.114.114.114
 server=/yuekeyun.com/114.114.114.114
 server=/yuekuapp.com/114.114.114.114
