--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93628,6 +93628,7 @@ server=/yueyouxs.com/114.114.114.114
 server=/yueyq.com/114.114.114.114
 server=/yueyu114.com/114.114.114.114
 server=/yueyuanzhiye.com/114.114.114.114
+server=/yueyuego.com/114.114.114.114
 server=/yueyues.com/114.114.114.114
 server=/yueyueworld.com/114.114.114.114
 server=/yueyueyd.com/114.114.114.114
