accelerated-domains: add yueyuego.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93620,6 +93620,7 @@ server=/yueyouxs.com/114.114.114.114
 server=/yueyq.com/114.114.114.114
 server=/yueyu114.com/114.114.114.114
 server=/yueyuanzhiye.com/114.114.114.114
+server=/yueyuego.com/114.114.114.114
 server=/yueyues.com/114.114.114.114
 server=/yueyueworld.com/114.114.114.114
 server=/yueyueyd.com/114.114.114.114
