--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93663,6 +93663,7 @@ server=/yuhocare.com/114.114.114.114
 server=/yuhongchem.com/114.114.114.114
 server=/yuhou.com/114.114.114.114
 server=/yuhougame.com/114.114.114.114
+server=/yuhuads.com/114.114.114.114
 server=/yuhuagu.com/114.114.114.114
 server=/yuhuanghuagong.com/114.114.114.114
 server=/yuhuijob.com/114.114.114.114
