--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93705,6 +93705,7 @@ server=/yulhe.com/114.114.114.114
 server=/yuli.be/114.114.114.114
 server=/yuliancn.com/114.114.114.114
 server=/yulicdn.com/114.114.114.114
+server=/yulidianshang.com/114.114.114.114
 server=/yulinapp.com/114.114.114.114
 server=/yulincard.com/114.114.114.114
 server=/yulinduoduo.com/114.114.114.114
