--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94031,6 +94031,7 @@ server=/yunxiacn.com/114.114.114.114
 server=/yunxiangschool.com/114.114.114.114
 server=/yunxiao.com/114.114.114.114
 server=/yunxin123.com/114.114.114.114
+server=/yunxin163.com/114.114.114.114
 server=/yunxindai.com/114.114.114.114
 server=/yunxindns.com/114.114.114.114
 server=/yunxinfa.com/114.114.114.114
