--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94048,6 +94048,7 @@ server=/yunxinfa.com/114.114.114.114
 server=/yunxinfw.com/114.114.114.114
 server=/yunxing123.com/114.114.114.114
 server=/yunxing168.com/114.114.114.114
+server=/yunxingslb.com/114.114.114.114
 server=/yunxinshi.com/114.114.114.114
 server=/yunxinvcloud.com/114.114.114.114
 server=/yunxiren.com/114.114.114.114
