--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94049,6 +94049,7 @@ server=/yunxinfw.com/114.114.114.114
 server=/yunxing123.com/114.114.114.114
 server=/yunxing168.com/114.114.114.114
 server=/yunxingslb.com/114.114.114.114
+server=/yunxinhi.com/114.114.114.114
 server=/yunxinshi.com/114.114.114.114
 server=/yunxinvcloud.com/114.114.114.114
 server=/yunxiren.com/114.114.114.114
