accelerated-domains: add yunxinrtc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94051,6 +94051,7 @@ server=/yunxing168.com/114.114.114.114
 server=/yunxingslb.com/114.114.114.114
 server=/yunxinhi.com/114.114.114.114
 server=/yunxinhy.com/114.114.114.114
+server=/yunxinrtc.com/114.114.114.114
 server=/yunxinshi.com/114.114.114.114
 server=/yunxinvcloud.com/114.114.114.114
 server=/yunxiren.com/114.114.114.114
