accelerated-domains: add yunxinsvr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94053,6 +94053,7 @@ server=/yunxinhi.com/114.114.114.114
 server=/yunxinhy.com/114.114.114.114
 server=/yunxinrtc.com/114.114.114.114
 server=/yunxinshi.com/114.114.114.114
+server=/yunxinsvr.com/114.114.114.114
 server=/yunxinvcloud.com/114.114.114.114
 server=/yunxiren.com/114.114.114.114
 server=/yunxiu.com/114.114.114.114
