accelerated-domains: add yunxinvideo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94046,6 +94046,7 @@ server=/yunxinrtc.com/114.114.114.114
 server=/yunxinshi.com/114.114.114.114
 server=/yunxinsvr.com/114.114.114.114
 server=/yunxinvcloud.com/114.114.114.114
+server=/yunxinvideo.com/114.114.114.114
 server=/yunxiren.com/114.114.114.114
 server=/yunxiu.com/114.114.114.114
 server=/yunxuetang.com/114.114.114.114
