--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94116,6 +94116,7 @@ server=/yuren.org/114.114.114.114
 server=/yuriimg.com/114.114.114.114
 server=/yusa.me/114.114.114.114
 server=/yusainorthwest.com/114.114.114.114
+server=/yushanfang.com/114.114.114.114
 server=/yushangmao.com/114.114.114.114
 server=/yushengny.com/114.114.114.114
 server=/yushexuetang.com/114.114.114.114
