--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94240,6 +94240,7 @@ server=/ywindex.com/114.114.114.114
 server=/ywinf.com/114.114.114.114
 server=/ywit.xyz/114.114.114.114
 server=/ywjinfabag.com/114.114.114.114
+server=/ywjsgc.com/114.114.114.114
 server=/ywky.org/114.114.114.114
 server=/ywlm.net/114.114.114.114
 server=/ywnds.com/114.114.114.114
