--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94255,6 +94255,7 @@ server=/ywstsb.com/114.114.114.114
 server=/ywtd.xyz/114.114.114.114
 server=/ywurl.com/114.114.114.114
 server=/ywwg.net/114.114.114.114
+server=/ywwm.net/114.114.114.114
 server=/ywwpay.com/114.114.114.114
 server=/ywxue.com/114.114.114.114
 server=/ywxww.net/114.114.114.114
