accelerated-domains: add yxgfcj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94308,6 +94308,7 @@ server=/yxfwai.com/114.114.114.114
 server=/yxgcx.com/114.114.114.114
 server=/yxgczx.com/114.114.114.114
 server=/yxgf.net/114.114.114.114
+server=/yxgfcj.com/114.114.114.114
 server=/yxglpjx.com/114.114.114.114
 server=/yxgxbike.com/114.114.114.114
 server=/yxgxw.com/114.114.114.114
