--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94638,6 +94638,7 @@ server=/yzx0771.com/114.114.114.114
 server=/yzxcfdj.com/114.114.114.114
 server=/yzxdyrmyy.com/114.114.114.114
 server=/yzxingyuan.com/114.114.114.114
+server=/yzxls.com/114.114.114.114
 server=/yzxxfzy.com/114.114.114.114
 server=/yzy-gx.com/114.114.114.114
 server=/yzygo.com/114.114.114.114
