--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94700,6 +94700,7 @@ server=/zabxib.com/114.114.114.114
 server=/zac1993.com/114.114.114.114
 server=/zack.asia/114.114.114.114
 server=/zackku.com/114.114.114.114
+server=/zacveh.com/114.114.114.114
 server=/zaduonews.com/114.114.114.114
 server=/zaeke.com/114.114.114.114
 server=/zafinsvc.com/114.114.114.114
