accelerated-domains: add zca31.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94907,6 +94907,7 @@ server=/zc0317.com/114.114.114.114
 server=/zc532.com/114.114.114.114
 server=/zc61.com/114.114.114.114
 server=/zc6sigma.com/114.114.114.114
+server=/zca31.com/114.114.114.114
 server=/zcaijing.com/114.114.114.114
 server=/zcand.com/114.114.114.114
 server=/zcbearing.com/114.114.114.114
