--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94917,6 +94917,7 @@ server=/zccrzx.com/114.114.114.114
 server=/zcdiesel.com/114.114.114.114
 server=/zcdlkeji.com/114.114.114.114
 server=/zcdog.com/114.114.114.114
+server=/zcdsp.com/114.114.114.114
 server=/zcdz1688.com/114.114.114.114
 server=/zcedustudy.com/114.114.114.114
 server=/zcfc.com/114.114.114.114
