accelerated-domains: add zdd-9.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94994,6 +94994,7 @@ server=/zdcj.net/114.114.114.114
 server=/zdcjw18.com/114.114.114.114
 server=/zdcs666.com/114.114.114.114
 server=/zdctid.com/114.114.114.114
+server=/zdd-9.com/114.114.114.114
 server=/zddhr.com/114.114.114.114
 server=/zddhub.com/114.114.114.114
 server=/zddjq.com/114.114.114.114
