--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95004,6 +95004,7 @@ server=/zdeqs.com/114.114.114.114
 server=/zdevo.com/114.114.114.114
 server=/zdexe.com/114.114.114.114
 server=/zdface.com/114.114.114.114
+server=/zdfans.com/114.114.114.114
 server=/zdfx.net/114.114.114.114
 server=/zdgkyy.com/114.114.114.114
 server=/zdgxchina.com/114.114.114.114
