accelerated-domains: add zengenti.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95085,6 +95085,7 @@ server=/zen-est.com/114.114.114.114
 server=/zencheer.com/114.114.114.114
 server=/zencre.net/114.114.114.114
 server=/zengdefei.com/114.114.114.114
+server=/zengenti.com/114.114.114.114
 server=/zengjunpeng.com/114.114.114.114
 server=/zengjunyin.com/114.114.114.114
 server=/zengrong.net/114.114.114.114
