--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95113,6 +95113,7 @@ server=/zeroling.com/114.114.114.114
 server=/zerongjituan.com/114.114.114.114
 server=/zeroonead.com/114.114.114.114
 server=/zerustech.com/114.114.114.114
+server=/zeryt111.fun/114.114.114.114
 server=/zesee.com/114.114.114.114
 server=/zesenjt.com/114.114.114.114
 server=/zeshengproject.com/114.114.114.114
