--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95247,6 +95247,7 @@ server=/zgdygf.com/114.114.114.114
 server=/zgdztk.com/114.114.114.114
 server=/zgeyanwo.com/114.114.114.114
 server=/zgfs.cc/114.114.114.114
+server=/zgfszs.com/114.114.114.114
 server=/zgfwgj.com/114.114.114.114
 server=/zgfxnews.com/114.114.114.114
 server=/zgfzh.com/114.114.114.114
