--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95488,6 +95488,7 @@ server=/zh-itone.com/114.114.114.114
 server=/zh-jieli.com/114.114.114.114
 server=/zh-piao.com/114.114.114.114
 server=/zh.cc/114.114.114.114
+server=/zh1144.com/114.114.114.114
 server=/zh188.net/114.114.114.114
 server=/zh30.com/114.114.114.114
 server=/zh51home.com/114.114.114.114
