--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95548,6 +95548,7 @@ server=/zhangfupeng.com/114.114.114.114
 server=/zhanggang.net/114.114.114.114
 server=/zhanggaoyuan.com/114.114.114.114
 server=/zhangge.net/114.114.114.114
+server=/zhangheng.me/114.114.114.114
 server=/zhanghonghong.com/114.114.114.114
 server=/zhanghongliang.com/114.114.114.114
 server=/zhangjet.com/114.114.114.114
