accelerated-domains: add zhanjiangletian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95623,6 +95623,7 @@ server=/zhanhuiniu.com/114.114.114.114
 server=/zhanhuiquan.com/114.114.114.114
 server=/zhanhuo.com/114.114.114.114
 server=/zhanid.com/114.114.114.114
+server=/zhanjiangletian.com/114.114.114.114
 server=/zhankoo.com/114.114.114.114
 server=/zhankuaqq.com/114.114.114.114
 server=/zhanlingol.com/114.114.114.114
