accelerated-domains: add zhh8886.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95937,6 +95937,7 @@ server=/zhgnj.com/114.114.114.114
 server=/zhgqt.com/114.114.114.114
 server=/zhgreens.com/114.114.114.114
 server=/zhguoguo.com/114.114.114.114
+server=/zhh8886.com/114.114.114.114
 server=/zhhainiao.com/114.114.114.114
 server=/zhhaitai.com/114.114.114.114
 server=/zhheo.com/114.114.114.114
