accelerated-domains: add zhiad.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95942,6 +95942,7 @@ server=/zhi-ming.com/114.114.114.114
 server=/zhi-niao.com/114.114.114.114
 server=/zhi.hu/114.114.114.114
 server=/zhi3.net/114.114.114.114
+server=/zhiad.com/114.114.114.114
 server=/zhiaimusic.com/114.114.114.114
 server=/zhiangroup.com/114.114.114.114
 server=/zhiannet.com/114.114.114.114
