--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96131,6 +96131,7 @@ server=/zhinikefu.com/114.114.114.114
 server=/zhiniu8.com/114.114.114.114
 server=/zhinvnetwork.com/114.114.114.114
 server=/zhinvxingkeji.com/114.114.114.114
+server=/zhiong.net/114.114.114.114
 server=/zhipan.net/114.114.114.114
 server=/zhipeix.com/114.114.114.114
 server=/zhiper.com/114.114.114.114
