--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96231,6 +96231,7 @@ server=/zhiyuanshijie.com/114.114.114.114
 server=/zhiyuanxinglvye.com/114.114.114.114
 server=/zhiyuanyun.com/114.114.114.114
 server=/zhiyuanzhongyi.com/114.114.114.114
+server=/zhiyueit.com/114.114.114.114
 server=/zhiyuequan.com/114.114.114.114
 server=/zhiyuewulian.com/114.114.114.114
 server=/zhiyun-tech.com/114.114.114.114
