accelerated-domains: add zhuangjizhuli.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96573,6 +96573,7 @@ server=/zhuangbutong.com/114.114.114.114
 server=/zhuangji.net/114.114.114.114
 server=/zhuangjiba.com/114.114.114.114
 server=/zhuangjinshanhe.com/114.114.114.114
+server=/zhuangjizhuli.net/114.114.114.114
 server=/zhuangkou.com/114.114.114.114
 server=/zhuangku.com/114.114.114.114
 server=/zhuangpeitu.com/114.114.114.114
