accelerated-domains: add zhudiaosz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96639,6 +96639,7 @@ server=/zhuchengliang.com/114.114.114.114
 server=/zhuchuang.club/114.114.114.114
 server=/zhudai.com/114.114.114.114
 server=/zhudianquan.com/114.114.114.114
+server=/zhudiaosz.com/114.114.114.114
 server=/zhuding.net/114.114.114.114
 server=/zhufan.net/114.114.114.114
 server=/zhufaner.com/114.114.114.114
