accelerated-domains: add zhufushuo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96646,6 +96646,7 @@ server=/zhufaner.com/114.114.114.114
 server=/zhufangdianping.com/114.114.114.114
 server=/zhufengpeixun.com/114.114.114.114
 server=/zhufg.com/114.114.114.114
+server=/zhufushuo.com/114.114.114.114
 server=/zhufuyujd.com/114.114.114.114
 server=/zhuge.com/114.114.114.114
 server=/zhuge888.com/114.114.114.114
