--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96863,6 +96863,7 @@ server=/zhxwq.com/114.114.114.114
 server=/zhxww.net/114.114.114.114
 server=/zhxwzx.com/114.114.114.114
 server=/zhxy1z.com/114.114.114.114
+server=/zhy333.com/114.114.114.114
 server=/zhyccw.com/114.114.114.114
 server=/zhycn.com/114.114.114.114
 server=/zhyd.me/114.114.114.114
