accelerated-domains: add ziweuu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97037,6 +97037,7 @@ server=/ziwanyouxi.com/114.114.114.114
 server=/ziweicn.com/114.114.114.114
 server=/ziweifu.com/114.114.114.114
 server=/ziweihuan.com/114.114.114.114
+server=/ziweuu.com/114.114.114.114
 server=/ziwojianding.net/114.114.114.114
 server=/ziwork.com/114.114.114.114
 server=/ziwoyou.net/114.114.114.114
