accelerated-domains: add ziye8.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97064,6 +97064,7 @@ server=/ziyanfoods.com/114.114.114.114
 server=/ziyanmm.com/114.114.114.114
 server=/ziyaokj.com/114.114.114.114
 server=/ziye66.com/114.114.114.114
+server=/ziye8.com/114.114.114.114
 server=/ziyexing.com/114.114.114.114
 server=/ziyi-health.com/114.114.114.114
 server=/ziyimall.com/114.114.114.114
