--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97125,6 +97125,7 @@ server=/zjbdt.com/114.114.114.114
 server=/zjbelong.com/114.114.114.114
 server=/zjbinya.com/114.114.114.114
 server=/zjbolunfilter.com/114.114.114.114
+server=/zjbuc.com/114.114.114.114
 server=/zjbyte.com/114.114.114.114
 server=/zjbyte.net/114.114.114.114
 server=/zjca.org/114.114.114.114
