accelerated-domains: add zjlanbi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97254,6 +97254,7 @@ server=/zjknews.com/114.114.114.114
 server=/zjkpet.com/114.114.114.114
 server=/zjks.com/114.114.114.114
 server=/zjkwhjj.com/114.114.114.114
+server=/zjlanbi.com/114.114.114.114
 server=/zjlcwg.com/114.114.114.114
 server=/zjldrcb.com/114.114.114.114
 server=/zjledfbd.com/114.114.114.114
