--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97563,6 +97563,7 @@ server=/zmirrordemo.com/114.114.114.114
 server=/zmister.com/114.114.114.114
 server=/zmjiudian.com/114.114.114.114
 server=/zmjm.com/114.114.114.114
+server=/zmkma.com/114.114.114.114
 server=/zmlearn.com/114.114.114.114
 server=/zmmdn.com/114.114.114.114
 server=/zmmek.com/114.114.114.114
