accelerated-domains: add zongzuhulian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97711,6 +97711,7 @@ server=/zongyimobile.com/114.114.114.114
 server=/zongyionline.com/114.114.114.114
 server=/zongyiphone.com/114.114.114.114
 server=/zongyixun.com/114.114.114.114
+server=/zongzuhulian.com/114.114.114.114
 server=/zonhen.com/114.114.114.114
 server=/zonst.com/114.114.114.114
 server=/zontes.com/114.114.114.114
