accelerated-domains: add zsincer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97935,6 +97935,7 @@ server=/zshuoshao.store/114.114.114.114
 server=/zshuoshao.tech/114.114.114.114
 server=/zsia.org/114.114.114.114
 server=/zsihuo.com/114.114.114.114
+server=/zsincer.com/114.114.114.114
 server=/zsite.com/114.114.114.114
 server=/zsj18.com/114.114.114.114
 server=/zsjinqi.com/114.114.114.114
