accelerated-domains: add zswph.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97973,6 +97973,7 @@ server=/zsvsz.com/114.114.114.114
 server=/zswcn.com/114.114.114.114
 server=/zswebao.shop/114.114.114.114
 server=/zswmailbox.com/114.114.114.114
+server=/zswph.com/114.114.114.114
 server=/zswtjt.com/114.114.114.114
 server=/zsxfsy.com/114.114.114.114
 server=/zsxinsha.com/114.114.114.114
