accelerated-domains: add ztcexam.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98000,6 +98000,7 @@ server=/ztbeijixing.com/114.114.114.114
 server=/ztbest.com/114.114.114.114
 server=/ztcadx.com/114.114.114.114
 server=/ztcdata.com/114.114.114.114
+server=/ztcexam.com/114.114.114.114
 server=/ztch.ltd/114.114.114.114
 server=/ztcia.com/114.114.114.114
 server=/ztcnwy.com/114.114.114.114
