accelerated-domains: add zuysfr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98251,6 +98251,7 @@ server=/zuwuzhuyi.com/114.114.114.114
 server=/zuxiaoqi.com/114.114.114.114
 server=/zuxiaoyi.com/114.114.114.114
 server=/zuyouzu.com/114.114.114.114
+server=/zuysfr.com/114.114.114.114
 server=/zuyunfei.com/114.114.114.114
 server=/zuyushop.com/114.114.114.114
 server=/zuzheyong.com/114.114.114.114
