accelerated-domains: add zzqqhb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98665,6 +98665,7 @@ server=/zzpuke.com/114.114.114.114
 server=/zzqfte.com/114.114.114.114
 server=/zzqiyou.com/114.114.114.114
 server=/zzqklm.com/114.114.114.114
+server=/zzqqhb.com/114.114.114.114
 server=/zzqss.com/114.114.114.114
 server=/zzquan9.com/114.114.114.114
 server=/zzqudu.com/114.114.114.114
