accelerated-domains: add teshuzi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76725,6 +76725,7 @@ server=/tesery.com/114.114.114.114
 server=/tesexiu.com/114.114.114.114
 server=/tesfw.com/114.114.114.114
 server=/teshenqi.com/114.114.114.114
+server=/teshuzi.com/114.114.114.114
 server=/tesight.com/114.114.114.114
 server=/tesolsh.com/114.114.114.114
 server=/tesoon.com/114.114.114.114
