accelerated-domains: add 269n.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -2849,6 +2849,7 @@ server=/2688.com/114.114.114.114
 server=/268v.com/114.114.114.114
 server=/269.net/114.114.114.114
 server=/26923.com/114.114.114.114
+server=/269n.com/114.114.114.114
 server=/26duc.com/114.114.114.114
 server=/26host.com/114.114.114.114
 server=/26joy.com/114.114.114.114
