accelerated-domains: add 365xs.la

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3698,6 +3698,7 @@ server=/365vip.com/114.114.114.114
 server=/365world.com/114.114.114.114
 server=/365xiaoyanzi.com/114.114.114.114
 server=/365xiazai.com/114.114.114.114
+server=/365xs.la/114.114.114.114
 server=/365xuet.com/114.114.114.114
 server=/365yg.com/114.114.114.114
 server=/365you.com/114.114.114.114
