accelerated-domains: add 366xsw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3715,6 +3715,7 @@ server=/366ec.com/114.114.114.114
 server=/366ec.net/114.114.114.114
 server=/366kmpf.com/114.114.114.114
 server=/366translation.com/114.114.114.114
+server=/366xsw.com/114.114.114.114
 server=/36706.com/114.114.114.114
 server=/3673.com/114.114.114.114
 server=/367edu.com/114.114.114.114
