accelerated-domains: add 51tuz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5091,6 +5091,7 @@ server=/51trust.com/114.114.114.114
 server=/51ttxue.com/114.114.114.114
 server=/51tuiyi.com/114.114.114.114
 server=/51tunhuo.com/114.114.114.114
+server=/51tuz.com/114.114.114.114
 server=/51tv.com/114.114.114.114
 server=/51tv.net/114.114.114.114
 server=/51tvbao.com/114.114.114.114
