accelerated-domains: add 520txtba.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5251,6 +5251,7 @@ server=/520ok.net/114.114.114.114
 server=/520qr.net/114.114.114.114
 server=/520switch.com/114.114.114.114
 server=/520touxiang.com/114.114.114.114
+server=/520txtba.com/114.114.114.114
 server=/520way.com/114.114.114.114
 server=/520xiazai.com/114.114.114.114
 server=/520xp.com/114.114.114.114
