accelerated-domains: add axxsw.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12407,6 +12407,7 @@ server=/axunyou.com/114.114.114.114
 server=/axure.us/114.114.114.114
 server=/axureshop.com/114.114.114.114
 server=/axureux.com/114.114.114.114
+server=/axxsw.org/114.114.114.114
 server=/axybio.com/114.114.114.114
 server=/axyxt.com/114.114.114.114
 server=/axzchou.com/114.114.114.114
