accelerated-domains: add bimiwu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14543,6 +14543,7 @@ server=/bimant.com/114.114.114.114
 server=/bimface.com/114.114.114.114
 server=/bimfmchina.com/114.114.114.114
 server=/bimige.net/114.114.114.114
+server=/bimiwu.com/114.114.114.114
 server=/bimiwuxs.com/114.114.114.114
 server=/bimjoy.com/114.114.114.114
 server=/bimsa.net/114.114.114.114
