accelerated-domains: add bxwx.io

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16448,6 +16448,7 @@ server=/bxv8.com/114.114.114.114
 server=/bxwatch.com/114.114.114.114
 server=/bxwljt.com/114.114.114.114
 server=/bxwst.com/114.114.114.114
+server=/bxwx.io/114.114.114.114
 server=/bxwx.tv/114.114.114.114
 server=/bxxy.com/114.114.114.114
 server=/bxxyysc.com/114.114.114.114
