accelerated-domains: add cbxs.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17342,6 +17342,7 @@ server=/cburi.com/114.114.114.114
 server=/cbvac.com/114.114.114.114
 server=/cbvvt.com/114.114.114.114
 server=/cbxg.icu/114.114.114.114
+server=/cbxs.net/114.114.114.114
 server=/cby.me/114.114.114.114
 server=/cbzr.com/114.114.114.114
 server=/cc-airshow.com/114.114.114.114
