accelerated-domains: add dizhu.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25715,6 +25715,7 @@ server=/diyyh.com/114.114.114.114
 server=/dizalpharma.com/114.114.114.114
 server=/dizhimei.com/114.114.114.114
 server=/dizhonghaihotel.com/114.114.114.114
+server=/dizhu.org/114.114.114.114
 server=/dizhuche.com/114.114.114.114
 server=/diziguiwang.com/114.114.114.114
 server=/dizzylab.net/114.114.114.114
