accelerated-domains: add dsm888.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26833,6 +26833,7 @@ server=/dslr120.com/114.114.114.114
 server=/dslt.tech/114.114.114.114
 server=/dslwk.com/114.114.114.114
 server=/dslyy.com/114.114.114.114
+server=/dsm888.com/114.114.114.114
 server=/dsmxp.com/114.114.114.114
 server=/dsmyiyuan.com/114.114.114.114
 server=/dsmzyy.com/114.114.114.114
